--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,18 +1,14 @@
-# Use Node.js LTS image
+# Use Node.js LTS
 FROM node:20-alpine
 
-# Set working directory
 WORKDIR /app
 
-# Copy package files and install dependencies
 COPY package*.json ./
 RUN npm install --production
 
-# Copy the rest of the backend code
 COPY . .
 
-# Expose backend port
 EXPOSE 8080
 
-# Start the backend
-CMD ["node", "server.js"]
+CMD ["node", "src/server.js"]
+
