--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,16 +1,20 @@
-# Use Nginx to serve the frontend
-FROM nginx:alpine
+FROM node:20-alpine AS build
 
-# Copy prebuilt dist files from your repo to Nginx folder
-COPY ./dist /usr/share/nginx/html
+WORKDIR /app
 
-# Copy custom Nginx config if needed
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY package*.json ./
+RUN npm install
 
-# Expose HTTP port
+COPY . .
+RUN npm run build
+
+# Serve with Nginx
+FROM nginx:stable-alpine
+COPY --from=build /app/dist /usr/share/nginx/html
+COPY ../nginx/default.conf /etc/nginx/conf.d/default.conf
+
 EXPOSE 80
-
-# Start Nginx
 CMD ["nginx", "-g", "daemon off;"]
+
 
 
