--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,19 +1,16 @@
-FROM node:20-alpine AS build
-
-WORKDIR /app
-
-COPY package*.json ./
-RUN npm install
-
-COPY . .
-RUN npm run build
-
-# Serve with Nginx
+# Use Nginx to serve static files
 FROM nginx:stable-alpine
-COPY --from=build /app/dist /usr/share/nginx/html
-COPY ../nginx/default.conf /etc/nginx/conf.d/default.conf
 
+# Copy the built frontend (dist folder) into Nginx
+COPY dist /usr/share/nginx/html
+
+# Copy Nginx config (make sure it's inside frontend folder or adjust path)
+COPY default.conf /etc/nginx/conf.d/default.conf
+
+# Expose port 80
 EXPOSE 80
+
+# Start Nginx
 CMD ["nginx", "-g", "daemon off;"]
 
 
